# athena-rs

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/parser/: Cargo.toml
crates/sourcegen/: Cargo.toml
crates/sourcegen/src/: lib.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: lib.rs
xtask/src/: main.rs
