[package]
name = "syntax"
version = "0.1.0"
edition = "2021"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.8.1"
rowan = "0.15.10"
smol_str = "0.1.24"
parser = { path = "../parser" }

[dev-dependencies]
itertools.workspace = true
insta.workspace = true
